pintle handling updates; allow fixed weight pintle without omni